--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,8 +37,18 @@ body {
 h2 {
   font-size: 28px;
   font-weight: 300;
+  align-items: left;
+  margin-top: 0;
 }
 
+.blue-line {
+  width: 40px;
+  border: 0;
+  border-bottom: 2px solid #49abfe;
+  display: block;
+  margin-left: 0;
+}
+/* BUTTONS */
 button {
   border: 2px solid;
   border-radius: 25px;
@@ -49,40 +59,44 @@ button {
   height: 50px;
   letter-spacing: 1px;
   text-transform: uppercase;
-  transition: transform 80ms ease-in;
+  transition: all 300ms ease-in;
   cursor: pointer;
 }
-
 .overlay button {
   border-color: #f89a35;
   background-color: #f89a35;
 }
-
-button.ghost {
+.overlay button:hover {
+  border-color: #f8bf35;
+  background-color: #f8bf35;
+}
+.shadow-container button {
   background-color: transparent;
   border-color: #49abfe;
 }
-
-button.ghost:hover {
+.shadow-container button:hover {
   background-color: #49abfe;
 }
 
 form {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 0 50px;
-  height: 100%;
-  text-align: center;
+  position: absolute;
+  width: 60%;
 }
 
 input {
-  background-color: #eee;
-  border: none;
-  padding: 12px 15px;
-  margin: 8px 0;
+  position: relative;
+  border: 0;
+  border-bottom: 1px solid #cbd2df;
+  background-color: transparent;
+  display: block;
+  padding: 0;
+  margin-bottom: 20px;
   width: 100%;
+}
+
+a {
+  text-decoration: none;
+  color: #8895b7;
 }
 
 .container {
@@ -93,7 +107,8 @@ input {
   min-height: 462px;
 }
 
-.form-container {
+/* SHADOW CONTAINER*/
+.shadow-container {
   position: absolute;
   height: 100%;
   color: #fff;
@@ -112,21 +127,14 @@ input {
 }
 
 .sign-up-container {
-  padding: 60px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
+  padding: 85px 65px;
 }
 
 .sign-in-container {
-  padding: 60px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
+  padding: 120px 60px;
 }
 
+/* OVERLAY */
 .overlay-container {
   position: absolute;
   top: 0;
@@ -136,10 +144,6 @@ input {
   overflow: hidden;
   transition: transform 0.6s ease-in-out;
   z-index: 100;
-}
-
-.container.right-panel-active .overlay-container {
-  transform: translateX(-422px);
 }
 
 .overlay {
@@ -153,15 +157,18 @@ input {
   height: 100%;
   width: 884px;
   transform: translateX(0);
-  transition: transform 0.6s ease-in-out;
+  transition: transform 0.9s ease-in-out;
 }
 
 .overlay h2 {
   color: #3e495e;
+  display: inline-block;
 }
 
-.container.right-panel-active .overlay {
-  transform: translateX(422px);
+.overlay label {
+  color: #8895b7;
+  display: inline-block;
+  margin: 0;
 }
 
 .overlay-panel {
@@ -170,7 +177,6 @@ input {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  text-align: center;
   top: 0;
   height: 100%;
   width: 462px;
@@ -182,11 +188,27 @@ input {
   transform: translateX(0);
 }
 
+.container.right-panel-active .overlay {
+  transform: translateX(422px);
+}
+
+.container.right-panel-active .overlay-container {
+  transform: translateX(-422px);
+}
+
 .overlay-right {
   right: 0;
   transform: translateX(0);
 }
 
+.icon {
+  float: right;
+}
+.required {
+  color: red;
+}
+
+/* FOOTER */
 footer {
   text-align: center;
   position: fixed;
